# invoicemanager

./: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260226_07ae0150c084_initial_schema.py  20260228_01ae9a112870_sprint2_matching_fx_tracking.py  20260228_40a5196c80fb_sprint1_import_history_company_settings_.py  20260330_sprint4_import_reconciliation.py
backend/: config.py  database.py  logging_config.py  main.py
backend/models/: __init__.py  bank_transaction.py  client.py  company_settings.py  cost_category.py  generated_invoice.py  import_history.py  invoice_line_item_source.py  line_item_definition.py  payment_receipt.py  provider_invoice.py  upwork_transaction.py  working_days_config.py
backend/routers/: backup.py  (+11 more)
docs/: BLUEPRINT-Invoice-Manager.md  InvoiceManager-Revision-Sprint-1.md  InvoiceManager-Revision-Sprint-2.md  InvoiceManager-Revision-Sprint-3.md  InvoiceManager-Revision-Sprint-4.md  Task-Icon-System-Overhaul.md  USER-GUIDE.md  architecture.md  implementation-plan.md  memory.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
mcp_server/: __main__.py  db.py  resources.py  server.py  tools_action.py  tools_query.py
tests/: conftest.py  test_api_crud.py  test_backup.py  test_bulk_upload.py  test_business_logic.py  test_dashboard.py  test_file_validation.py  test_foundation.py  test_import_services.py  test_invoice_engine.py  test_mcp_server.py  test_seed_validation.py  test_transaction_matching.py  test_xlsx_import_e2e.py
(+88 files in other folders)
