[project]
name = "invoicemanager"
version = "0.1.0"
description = "Local web application for monthly invoice management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "weasyprint>=62",
    "jinja2>=3.1",
    "mcp>=1.25",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
